outputs/ndx-test/eoh/2025-07-28_20-49-56/evaluations/problem_eval-2101332049934666350_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/ndx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/ndx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/ndx/tmp/gpt_temp_7_162c9851.py", line 1
    defined as the difference between the 50-day and 200-day Exponential Moving Averages (EMAs) of the closing price, adjusted by a weighted moving average of the past 10 days' closing prices.}
                                                                                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 1)
